<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Student Essentials</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="uni_logo_desc">University Logo</string>
    
    
    <string name="login_info">Enter your ID &amp; Password</string>
    <string name="login_username">Student ID</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>

    
    <string name="title_activity_main">Main</string>
    <string name="button_logout">Logout</string>
    <string name="user_guide">User Guide</string>
    
    
    <string-array name="deal_categories">
        <item>Choose category</item>
        <item>Clothing</item>
        <item>Groceries</item>
        <item>Restaurants</item>
        <item>Gaming</item>
        <item>Electronics</item>
        <item>Books</item>
        <item>Travel</item>
        <item>Mobiles</item>
        <item>Other</item>
    </string-array>
    
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
	<string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    
    <string name="temp_list_deals">A list of deals</string>
    <string name="deals_rating">1548</string>
    <string name="deals_title">Deal Title goes here!</string>
    <string name="deals_info">Submitted 18 minutes ago by 120250929</string>
    <string name="deals_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean gravida, dui eu sagittis hendrerit, erat sapien lacinia orci, nec scelerisque sapien dui ut diam. Vivamus sit amet scelerisque nunc. Mauris ac leo at est rutrum faucibus vel quis purus. Vivamus euismod nibh ac vehicula dignissim. Nulla sit amet facilisis nulla. Suspendisse vulputate pulvinar nisi, non ullamcorper augue. Nunc tincidunt pellentesque dolor, eget ultrices justo. Praesent porttitor leo imperdiet dignissim volutpat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean gravida, dui eu sagittis hendrerit, erat sapien lacinia orci, nec scelerisque sapien dui ut diam. Vivamus sit amet scelerisque nunc. Mauris ac leo at est rutrum faucibus vel quis purus. Vivamus euismod nibh ac vehicula dignissim. Nulla sit amet facilisis nulla. Suspendisse vulputate pulvinar nisi, non ullamcorper augue. Nunc tincidunt pellentesque dolor, eget ultrices justo. Praesent porttitor leo imperdiet dignissim volutpat!Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean gravida, dui eu sagittis hendrerit, erat sapien lacinia orci, nec scelerisque sapien dui ut diam. Vivamus sit amet scelerisque nunc. Mauris ac leo at est rutrum faucibus vel quis purus. Vivamus euismod nibh ac vehicula dignissim. Nulla sit amet facilisis nulla. Suspendisse vulputate pulvinar nisi, non ullamcorper augue. Nunc tincidunt pellentesque dolor, eget ultrices justo. Praesent porttitor leo imperdiet dignissim volutpat</string>
    <string name="deals_gotoUrl">Go To URL</string>
    <string name="deals_report">Report</string>
    
    
</resources>