<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f5f5fc"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- vote and score -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <ImageButton
                        android:id="@+id/vote_up"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="left"
                        android:layout_weight="1"
                        android:background="#f5f5fc"
                        android:gravity="left"
                        android:src="@drawable/vote_up" />

                    <TextView
                        android:id="@+id/vote_score"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="1245"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#269617"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <ImageButton
                        android:id="@+id/vote_down"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="right"
                        android:layout_weight="1"
                        android:background="#f5f5fc"
                        android:src="@drawable/vote_down" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/deal_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:src="@drawable/icon_other" />
            </LinearLayout>
            <!-- vote and score -->


            <!-- title, creator, description -->
            <TextView
                android:id="@+id/deal_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/deals_title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#273e45"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/deal_creator_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="#273e45"
                android:gravity="center"
                android:text="@string/deals_info"
                android:textColor="#fffce2"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/deal_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="left"
                android:text="@string/deals_description"
                android:textColor="#273e45"
                android:textSize="15sp" />
            <!-- title, creator, description -->
        </LinearLayout>
    </ScrollView>

    <!-- buttons at the bottom -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/deal_go_to_url"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight=".50"
            android:background="#122430"
            android:text="@string/deals_gotoUrl"
            android:textColor="#fffce2" />

        <Button
            android:id="@+id/deal_report"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight=".50"
            android:background="#a40606"
            android:text="@string/deals_report"
            android:textColor="#fffce2" />
    </LinearLayout>
    <!-- buttons at the bottom -->

</LinearLayout>